# znchat

./: README.md  pyproject.toml
app/: bun.lockb  package.json  vite.config.ts
app/src/: App.tsx  socket.tsx
znchat/: __init__.py  app.py  make_celery.py
znchat/main/: __init__.py  events.py  routes.py
znchat/tasks/: __init__.py
